fix text contrast

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -222,9 +222,6 @@ img {
 
 // light theme
 body.light {
-	.text-\[\#D15796\] {
-		color: #d15796 !important;
-	}
 	.text-title {
 		color: #003a91 !important;
 	}
@@ -232,7 +229,7 @@ body.light {
 		color: #ffffff !important;
 	}
 	.text-ruspberry {
-		color: #d15796 !important;
+		color: #c30065 !important;
 	}
 	.no-photo {
 		filter: invert(0);
